# fastapi-azure-ai-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: health.py  items.py
app/core/: config.py  logging.py  middleware.py  security.py  telemetry.py
app/infra/: db.py  keyvault.py
app/models/: item.py
app/schemas/: common.py  health.py  item.py
infra/terraform/: locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
migrations/versions/: 0001_create_items_table.py
tests/: conftest.py
tests/integration/: test_health.py  test_items.py
tests/unit/: test_config.py  test_schemas.py
